# Cardiac-Risk-Prediction

./: .gitignore  README.md  api.py  index.html  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
app/: Home.py
docs/: PIPELINE_GUIDE.md
models/: decision_tree.pkl  gaussian_naive_bayes.pkl  gradient_boosting.pkl  knn.pkl  lightgbm.pkl  logistic_regression.pkl  random_forest.pkl  svm_rbf.pkl  xgboost.pkl
notebooks/: eda.ipynb
src/: __init__.py  train.py
src/clustering/: __init__.py  patient_segments.py
src/evaluation/: __init__.py  metrics.py
src/explainability/: __init__.py  shap_analysis.py
src/features/: __init__.py  preprocessing.py
tests/: conftest.py  test_metrics.py  test_model_pipeline.py  test_preprocessing.py  test_sweep.py
