[project]
name = "cardiac-risk-classification"
version = "0.1.0"
description = "Classical supervised-ML cardiac risk classification on the UCI Cleveland Heart Disease dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
boosting = ["xgboost>=2.0", "lightgbm>=4.0"]
tracking = ["mlflow>=2.9"]
explain = ["shap>=0.44", "matplotlib>=3.7"]
app = ["streamlit>=1.30"]
api = ["fastapi>=0.110", "uvicorn>=0.27", "joblib>=1.3"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The Streamlit entry point must bootstrap sys.path before importing src/.
"app/Home.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
